--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -30,6 +30,8 @@
     "@nomicfoundation/hardhat-ethers": "~3.0.5",
     "@nomicfoundation/hardhat-network-helpers": "~1.0.6",
     "@nomicfoundation/hardhat-verify": "~2.0.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "@openzeppelin/test-helpers": "^0.5.16",
     "@typechain/ethers-v5": "~10.1.0",
     "@typechain/hardhat": "~9.1.0",
     "@types/eslint": "~8",
@@ -42,6 +44,7 @@
     "eslint": "~8.26.0",
     "eslint-config-prettier": "~8.5.0",
     "eslint-plugin-prettier": "~4.2.1",
+    "ethereum-waffle": "^4.0.10",
     "ethers": "~6.10.0",
     "hardhat": "~2.19.4",
     "hardhat-deploy": "~0.11.45",
