--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "hardhat:lint-staged": "yarn workspace @se-2/hardhat lint-staged",
     "hardhat:test": "yarn workspace @se-2/hardhat test",
     "postinstall": "husky install",
-    "next:build": "yarn workspace @se-2/nextjs build",
+    "next:build": "yarn ",
     "next:check-types": "yarn workspace @se-2/nextjs check-types",
     "next:format": "yarn workspace @se-2/nextjs format",
     "next:lint": "yarn workspace @se-2/nextjs lint",
