--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -17,6 +17,9 @@
     "verify": "hardhat etherscan-verify"
   },
   "dependencies": {
+    "@nomicfoundation/hardhat-ignition": "^0.15.5",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@nomicfoundation/ignition-core": "^0.15.5",
     "@openzeppelin/contracts": "~4.8.1",
     "@typechain/ethers-v6": "~0.5.1",
     "dotenv": "~16.0.3",
@@ -28,6 +31,7 @@
     "@ethersproject/providers": "~5.7.1",
     "@nomicfoundation/hardhat-chai-matchers": "~2.0.3",
     "@nomicfoundation/hardhat-ethers": "~3.0.5",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.5",
     "@nomicfoundation/hardhat-network-helpers": "~1.0.6",
     "@nomicfoundation/hardhat-verify": "~2.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
